# VTK-in-QT

./: CMakeLists.txt  README.md  VTKinQT.pro  mainview.cpp  mainview.ui
